--- a/app/index.html
+++ b/app/index.html
@@ -6,14 +6,20 @@
   <link rel="stylesheet" href="css/bootstrap.css">
   <link rel="stylesheet" href="css/app.css"/>
 </head>
-<body ng-app="">
+<body ng-app="AdsPublisher">
+
+<div class="container" ng-view>
+
+</div>
 
   <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
   <script src="lib/bootstrap.js"></script>
   <script src="lib/angular/angular.js"></script>
+  <script src="lib/angular/angular-resource.js"></script>
   <script src="lib/angular/angular-route.js"></script>
   <script src="js/app.js"></script>
   <script src="js/controllers/"></script>
   <script src="js/filters/"></script>
+  <script src="js/services/"></script>
 </body>
 </html>
