--- a/app/index.html
+++ b/app/index.html
@@ -7,10 +7,14 @@
   <link rel="stylesheet" href="css/app.css"/>
 </head>
 <body ng-app="AdsPublisher">
+    <header>This is the header</header>
+    <a href="#/partial1">Go to partial</a>
 
-<div class="container" ng-view>
+    <div class="container" ng-view>
 
-</div>
+    </div>
+
+    <footer>This is the footer</footer>
 
   <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
   <script src="lib/bootstrap.js"></script>
