--- a/app/index.html
+++ b/app/index.html
@@ -7,14 +7,31 @@
   <link rel="stylesheet" href="css/app.css"/>
 </head>
 <body ng-app="AdsPublisher">
-    <header>This is the header</header>
-    <a href="#/partial1">Go to partial</a>
 
-    <div class="container" ng-view>
+  <div class="navbar navbar-default">
+      <div class="navbar-header">
+          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-responsive-collapse">
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="#">Ads Publisher</a>
+      </div>
+      <div class="navbar-collapse collapse navbar-responsive-collapse">
+          <ul class="nav navbar-nav">
+              <li class="active"><a href="#/showAllAds">Show All Ads</a></li>
+          </ul>
+          <ul class="nav navbar-nav navbar-right">
+              <li><a href="#/login">Login</a></li>
+              <li><a href="#/register">Register</a></li>
+          </ul>
+      </div>
+  </div>
 
-    </div>
+  <div class="container" ng-view>
 
-    <footer>This is the footer</footer>
+  </div>
+
 
   <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
   <script src="lib/bootstrap.js"></script>
