--- a/app/index.html
+++ b/app/index.html
@@ -15,7 +15,7 @@
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">Ads Publisher</a>
+          <a class="navbar-brand" id="logo" href="#"><em>Ads Publisher</em></a>
       </div>
       <div class="navbar-collapse collapse navbar-responsive-collapse">
           <ul class="nav navbar-nav">
@@ -39,8 +39,8 @@
   <script src="lib/angular/angular-resource.js"></script>
   <script src="lib/angular/angular-route.js"></script>
   <script src="js/app.js"></script>
-  <script src="js/controllers/"></script>
+  <script src="js/controllers/GetAllAdsController.js"></script>
   <script src="js/filters/"></script>
-  <script src="js/services/"></script>
+  <script src="js/services/getData.js"></script>
 </body>
 </html>
