--- a/app/index.html
+++ b/app/index.html
@@ -8,7 +8,7 @@
 </head>
 <body ng-app="AdsPublisher">
 
-  <div class="navbar navbar-default">
+  <div class="navbar navbar-default navbar-fixed-top">
       <div class="navbar-header">
           <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-responsive-collapse">
               <span class="icon-bar"></span>
@@ -17,7 +17,7 @@
           </button>
           <a class="navbar-brand" id="logo" href="#"><em>Ads Publisher</em></a>
       </div>
-      <div class="navbar-collapse collapse navbar-responsive-collapse">
+      <div class="navbar-collapse collapse navbar-responsive-collapse" id="rightNavPart">
           <ul class="nav navbar-nav">
               <li class="active"><a href="#/showAllAds">Show All Ads</a></li>
           </ul>
@@ -32,6 +32,11 @@
 
   </div>
 
+  <footer>
+      <div class="well well-sm text-center">
+          © 2014 by Software University Foundation, No Rights Reserved
+      </div>
+  </footer>
 
   <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
   <script src="lib/bootstrap.js"></script>
@@ -40,6 +45,8 @@
   <script src="lib/angular/angular-route.js"></script>
   <script src="js/app.js"></script>
   <script src="js/controllers/GetAllAdsController.js"></script>
+  <script src="js/controllers/LoginController.js"></script>
+  <script src="js/controllers/RegisterController.js"></script>
   <script src="js/filters/"></script>
   <script src="js/services/getData.js"></script>
 </body>
