register form bugs fixed - acquired session token

--- a/app/index.html
+++ b/app/index.html
@@ -49,5 +49,6 @@
   <script src="js/controllers/RegisterController.js"></script>
   <script src="js/filters/"></script>
   <script src="js/services/getData.js"></script>
+  <script src="js/services/userData.js"></script>
 </body>
 </html>
