--- a/app/index.html
+++ b/app/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="en" >
+<html lang="en">
 <head>
   <meta charset="utf-8">
   <title>Ads Publisher</title>
-  <link rel="stylesheet" href="css/bootstrap.css">
+  <link rel="stylesheet" href="css/bootstrap.css"/>
   <link rel="stylesheet" href="css/app.css"/>
 </head>
 <body ng-app="AdsPublisher">
@@ -43,12 +43,14 @@
   <script src="lib/angular/angular.js"></script>
   <script src="lib/angular/angular-resource.js"></script>
   <script src="lib/angular/angular-route.js"></script>
+  <script src="lib/angular/angular-cookies.js"></script>
   <script src="js/app.js"></script>
   <script src="js/controllers/GetAllAdsController.js"></script>
   <script src="js/controllers/LoginController.js"></script>
   <script src="js/controllers/RegisterController.js"></script>
   <script src="js/filters/"></script>
-  <script src="js/services/getData.js"></script>
+  <script src="js/services/getAdsData.js"></script>
   <script src="js/services/userData.js"></script>
+  <script src="js/services/authenticationData.js"></script>
 </body>
 </html>
