code restructured bugs fixed

--- a/app/index.html
+++ b/app/index.html
@@ -49,7 +49,7 @@
   <script src="js/controllers/LoginController.js"></script>
   <script src="js/controllers/RegisterController.js"></script>
   <script src="js/filters/"></script>
-  <script src="js/services/getAdsData.js"></script>
+  <script src="js/services/adsData.js"></script>
   <script src="js/services/userData.js"></script>
   <script src="js/services/authenticationData.js"></script>
 </body>
