--- a/app/index.html
+++ b/app/index.html
@@ -7,8 +7,7 @@
   <link rel="stylesheet" href="css/app.css"/>
 </head>
 <body ng-app="AdsPublisher">
-
-  <div class="navbar navbar-default navbar-fixed-top" ng-controller="AdsController">
+  <div class="navbar navbar-default navbar-fixed-top">
       <div class="navbar-header">
           <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-responsive-collapse">
               <span class="icon-bar"></span>
@@ -17,25 +16,9 @@
           </button>
           <a class="navbar-brand" id="logo" href="#"><em>Ads Publisher</em></a>
       </div>
-      <div class="navbar-collapse collapse navbar-responsive-collapse" id="rightNavPart" ng-if="!isLogged">
+      <div class="navbar-collapse collapse navbar-responsive-collapse" id="rightNavPart">
           <ul class="nav navbar-nav">
               <li class="active"><a href="#/showAllAds">Show All Ads</a></li>
-          </ul>
-          <ul class="nav navbar-nav navbar-right">
-              <li><a href="#/login">Login</a></li>
-              <li><a href="#/register">Register</a></li>
-          </ul>
-      </div>
-      <div class="navbar-collapse collapse navbar-responsive-collapse" ng-if="isLogged">
-          <ul class="nav navbar-nav">
-              <li class="active"><a href="#/showAllAds">Show All Ads</a></li>
-              <li class="active"><a href="#/">My Ads</a></li>
-              <li class="active"><a href="#/">Publish New Ad</a></li>
-              <li class="active"><a href="#/">Edit Profile</a></li>
-          </ul>
-          <ul class="nav navbar-nav navbar-right">
-              <p>TODO NAme</p>
-              <li><a href="#/showAllAds">Logout</a></li>
           </ul>
       </div>
   </div>
