--- a/app/index.html
+++ b/app/index.html
@@ -43,6 +43,7 @@
   <script src="js/controllers/AdsController.js"></script>
   <script src="js/controllers/LoginController.js"></script>
   <script src="js/controllers/RegisterController.js"></script>
+  <script src="js/controllers/LogoutController.js"></script>
   <script src="js/filters/"></script>
   <script src="js/services/adsData.js"></script>
   <script src="js/services/userData.js"></script>
