--- a/app/index.html
+++ b/app/index.html
@@ -35,10 +35,12 @@
 
   <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
   <script src="lib/bootstrap.js"></script>
+  <script src="lib/jquery.noty.js"></script>
   <script src="lib/angular/angular.js"></script>
   <script src="lib/angular/angular-resource.js"></script>
   <script src="lib/angular/angular-route.js"></script>
   <script src="lib/angular/angular-cookies.js"></script>
+  <script src="lib/ui.bootstrap.pagination-0.12.0.js"></script>
   <script src="js/app.js"></script>
   <script src="js/controllers/AdsController.js"></script>
   <script src="js/controllers/LoginController.js"></script>
