--- a/app/index.html
+++ b/app/index.html
@@ -14,7 +14,7 @@
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" id="logo" href="#"><em>Ads Publisher</em></a>
+          <a class="navbar-brand" id="logo" href=""><em>Ads Publisher</em></a>
       </div>
       <div class="navbar-collapse collapse navbar-responsive-collapse" id="rightNavPart">
           <ul class="nav navbar-nav">
@@ -22,6 +22,7 @@
           </ul>
       </div>
   </div>
+
 
   <div class="container" ng-view>
 
