--- a/app/index.html
+++ b/app/index.html
@@ -47,6 +47,7 @@
   <script src="js/controllers/LoginController.js"></script>
   <script src="js/controllers/RegisterController.js"></script>
   <script src="js/controllers/LogoutController.js"></script>
+  <script src="js/controllers/PublishAdController.js"></script>
   <script src="js/filters/"></script>
   <script src="js/services/adsData.js"></script>
   <script src="js/services/userData.js"></script>
