--- a/app/index.html
+++ b/app/index.html
@@ -52,5 +52,6 @@
   <script src="js/services/adsData.js"></script>
   <script src="js/services/userData.js"></script>
   <script src="js/services/authenticationData.js"></script>
+  <script src="js/services/userAdsData.js"></script>
 </body>
 </html>
