--- a/app/index.html
+++ b/app/index.html
@@ -53,5 +53,6 @@
   <script src="js/services/userData.js"></script>
   <script src="js/services/authenticationData.js"></script>
   <script src="js/services/userAdsData.js"></script>
+  <script src="js/services/notifyService.js"></script>
 </body>
 </html>
