deactivate/publish again ad implemented

--- a/app/index.html
+++ b/app/index.html
@@ -49,6 +49,7 @@
   <script src="js/controllers/LogoutController.js"></script>
   <script src="js/controllers/PublishAdController.js"></script>
   <script src="js/controllers/UserAdsListController.js"></script>
+  <script src="js/controllers/DeleteAdController.js"></script>
   <script src="js/filters/"></script>
   <script src="js/services/adsData.js"></script>
   <script src="js/services/userData.js"></script>
